MAINT: Renaming based on the new name of the plugin (q2-minimap2)

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [versioneer]
 VCS=git
 style=pep440
-versionfile_source = q2_long_reads_qc/_version.py
-versionfile_build = q2_long_reads_qc/_version.py
+versionfile_source = q2_minimap2/_version.py
+versionfile_build = q2_minimap2/_version.py
 tag_prefix =
-parentdir_prefix = q2-long-reads-qc-
+parentdir_prefix = q2-minimap2-
 
 [flake8]
 max-line-length = 88
@@ -12,4 +12,3 @@ extend-ignore = E203
 
 [tool.isort]
 profile = "black"
-
