--- a/ci/recipe/mata.yaml
+++ b/ci/recipe/mata.yaml
@@ -20,18 +20,17 @@ requirements:
     - python {{ python }}
     - qiime2 {{ qiime2_epoch }}.*
     - q2-types {{ qiime2_epoch }}.*
-    - q2-feature-classifier {{ qiime2_epoch }}.*
     - q2templates {{ qiime2_epoch }}.*
     - q2cli {{ qiime2_epoch }}.*
+    - q2-feature-classifier {{ qiime2_epoch }}.*
     - minimap2
-    - bs4
+    - beautifulsoup4
     - samtools
 
 
 test:
   requires:
     - coverage
-    - pytest
     - pytest-cov
   imports:
     - q2_minimap2
