--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,7 +9,7 @@ jobs:
   ci:
     uses: qiime2/distributions/.github/workflows/lib-ci-dev.yaml@dev
     with:
-      distro: shotgun
+      distro: metagenome
       additional-reports-path: ./coverage.xml
       additional-reports-name: coverage
 
@@ -29,3 +29,5 @@ jobs:
         name: 'Upload coverage'
         with:
           fail_ci_if_error: true
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
