--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,7 +25,7 @@ jobs:
           name: ${{ needs.ci.outputs.additional-reports-name }}
           path: ${{ needs.ci.outputs.additional-reports-path }}
 
-      - uses: ccodecov/codecov-action@v4
+      - uses: codecov/codecov-action@v4
         name: 'Upload coverage'
         with:
           fail_ci_if_error: true
