--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,6 +19,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - uses: actions/setup-python@v3
+        with:
+          python-version: "3.11.9"
+
       - uses: actions/download-artifact@v3
         name: 'Fetch coverage from builds'
         with:
