--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,15 +13,15 @@ jobs:
       additional-reports-path: ./coverage.xml
       additional-reports-name: coverage
 
+    uses: actions/setup-python@v4
+      with:
+        python-version: "3.11"
+
   coverage:
     needs: [ci]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.11.9"
 
       - uses: actions/download-artifact@v3
         name: 'Fetch coverage from builds'
