--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,15 +7,20 @@ on:
 
 jobs:
   ci:
-    uses: qiime2/distributions/.github/workflows/lib-ci-dev.yaml@dev
-    with:
-      distro: metagenome
-      additional-reports-path: ./coverage.xml
-      additional-reports-name: coverage
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
 
-    uses: actions/setup-python@v4
-      with:
-        python-version: "3.11"
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+
+      - uses: qiime2/distributions/.github/workflows/lib-ci-dev.yaml@dev
+        with:
+          distro: metagenome
+          additional-reports-path: ./coverage.xml
+          additional-reports-name: coverage
 
   coverage:
     needs: [ci]
