--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,21 +7,11 @@ on:
 
 jobs:
   ci:
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
-
-      - uses: qiime2/distributions/.github/workflows/lib-ci-dev.yaml@dev
-        with:
-          distro: metagenome
-          additional-reports-path: ./coverage.xml
-          additional-reports-name: coverage
-
-
+    uses: qiime2/distributions/.github/workflows/lib-ci-dev.yaml@dev
+    with:
+      distro: metagenome
+      additional-reports-path: ./coverage.xml
+      additional-reports-name: coverage
 
   coverage:
     needs: [ci]
