--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [versioneer]
 VCS=git
 style=pep440
-versionfile_source = q2_minimap2/_version.py
-versionfile_build = q2_minimap2/_version.py
+versionfile_source = q2_pinocchio/_version.py
+versionfile_build = q2_pinocchio/_version.py
 tag_prefix =
-parentdir_prefix = q2-minimap2-
+parentdir_prefix = q2-pinocchio-
 
 [flake8]
 max-line-length = 88
