--- a/ci/recipe/meta.yaml
+++ b/ci/recipe/meta.yaml
@@ -2,7 +2,7 @@
 {% set version = data.get('version') or 'placehold' %}
 
 package:
-  name: q2-minimap2
+  name: q2-pinocchio
   version: {{ version }}
 
 source:
@@ -33,12 +33,12 @@ test:
     - coverage
     - pytest-cov
   imports:
-    - q2_minimap2
-    - qiime2.plugins.minimap2
+    - q2_pinocchio
+    - qiime2.plugins.pinocchio
   commands:
-    - pytest --cov q2_minimap2 --cov-report xml:coverage.xml --pyargs q2_minimap2
+    - pytest --cov q2_pinocchio --cov-report xml:coverage.xml --pyargs q2_pinocchio
 
 about:
-  home: https://github.com/bokulich-lab/q2-minimap2
+  home: https://github.com/bokulich-lab/q2-pinocchio
   license: BSD-3-Clause
   license_family: BSD
